--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 					<li><div class="title">2016</div></li>
 					<div class="details">
 					  <h5>SEE from Well-Known Academy</h5>
-					  <small class="fg-theme">Shree Vidhya Bikash Higher Secondary School.</small>
+					  <small class="fg-theme">Well-known Academy</small>
 					  <p>Passed out the under diploma wth demonstrating problem-solving skills and following persistent</p>
 					</div>
 					</ul>
@@ -412,7 +412,7 @@
 					<div class="details">
 					  <h5>Full Stack Developer</h5>
 					  <small class="fg-theme">Unicorn Techonology.</small>
-					  <p>Currently, working as a developer in a wide range company.</p>
+					  <p>Working as a developer in a wide range company.</p>
 					</div>
 				
 				  <ul class="theme-list">
@@ -543,10 +543,10 @@
 			</div>
 
 			<div class="portfolio-box">
-				<img src="img/p4.png" alt="">
+				<img src="img/print1.png" alt="">
 				<div class="portfolio-layer">
 					<h4>Web Development</h4>
-					<p>this the website of hotel which is made by me and this is fully dynamic site</p>
+					<p>fully dynamic site of printing company</p>
 						<i class='bx bx-link-external zoom-icon'></i>
 
 				</div>
@@ -586,7 +586,7 @@
 				<input type="number" placeholder="Mobile number">
 				<input type="text" placeholder="Address">
 			</div>
-			<textarea name="" id="" cols="30" rows="10">"Your Message"</textarea>
+			<textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
 			<a target="_blank" href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="btn"> Send Message</a>
 		</form>
 	</div>
