--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<span class="about__info-name">Customer <br> satisfaction</span>
 					</div>
 				  </div>
-				<a href="#" class="btn">Download CV</a>
+				<a target="_blank" href="img/Gaurav_subedi.pdf" class="btn">Download CV</a>
 				
 			</div>
 		</div>
